--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
@@ -27,7 +28,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
+	implementation group: 'org.springframework.amqp', name: 'spring-rabbit', version: '3.1.4'
+	implementation group: 'org.shelter.mq', name: 'objects', version: '1.0-SNAPSHOT'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
