--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=petservice
+server.port=8083
+
+spring.datasource.url=jdbc:mysql://localhost:3309/pet
+spring.datasource.username=ppiwko2
+spring.datasource.password=pass2
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
+
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
+topic.exchange.name=applicationExchangeName
+pet.queue.name=petQueue
+pet.routing.key=petRoutingKey
+
