find pets by shelterid and sync communication to find shelter name from shelter service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ topic.exchange.name=applicationExchangeName
 pet.queue.name=petQueue
 pet.routing.key=petRoutingKey
 
+#synchronization communication
+shelter.host=http://localhost:8084/
+
