--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
 	implementation group: 'org.springframework.amqp', name: 'spring-rabbit', version: '3.1.4'
 	implementation group: 'org.shelter.mq', name: 'objects', version: '1.0-SNAPSHOT'
+	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.6'
 }
 
 
