--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3309/pet
+spring.datasource.url=jdbc:mysql://pet-db:3306/pet
 spring.datasource.username=ppiwko2
 spring.datasource.password=pass2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
