entrypoint health enabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ pet.routing.key=petRoutingKey
 #synchronization communication
 shelter.host=http://localhost:8084/
 
+management.endpoint.health.enabled=true
