--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation group: 'org.springframework.amqp', name: 'spring-rabbit', version: '3.1.4'
 	implementation group: 'org.shelter.mq', name: 'objects', version: '1.0-SNAPSHOT'
 	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.6'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 
