--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation group: 'org.shelter.mq', name: 'objects', version: '1.0-SNAPSHOT'
 	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.6'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.1'
 }
 
 
