--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8083
+spring.application.name=pet-service
+server.port=0
 
 spring.datasource.url=jdbc:mysql://pet-db:3306/pet
 spring.datasource.username=ppiwko2
@@ -16,6 +17,8 @@ pet.queue.name=petQueue
 pet.routing.key=petRoutingKey
 
 #synchronization communication
-shelter.host=http://localhost:8084/
+shelter.host=http://shelter-service:8084/
 
 management.endpoint.health.enabled=true
+
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8090/eureka/
