--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,14 +1,14 @@
 spring.application.name=pet-service
-server.port=8085
+server.port=0
 
-spring.datasource.url=jdbc:mysql://localhost:3309/pet
+spring.datasource.url=jdbc:mysql://pet-db:3306/pet
 spring.datasource.username=ppiwko2
 spring.datasource.password=pass2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
@@ -21,4 +21,4 @@ shelter.host=http://shelter-service:8084/
 
 management.endpoint.health.enabled=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8090/eureka/
