improve sync communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ pet.queue.name=petQueue
 pet.routing.key=petRoutingKey
 
 #synchronization communication
-shelter.host=http://shelter-service:8084/
+shelter.host=http://localhost:8084/
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
