--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -7,3 +7,6 @@ spring.rabbitmq.host=rabbitmq
 management.endpoint.health.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8090/eureka/
+
+#synchronization communication
+shelter.host=http://shelter-service:8084/
