--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -9,4 +9,4 @@ management.endpoint.health.enabled=true
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8090/eureka/
 
 #synchronization communication
-shelter.host=http://shelter-service:8084/
+shelter.host=http://shelter-service/
