--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
-spring.rabbitmq.host=localhost
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
@@ -16,7 +15,32 @@ topic.exchange.name=applicationExchangeName
 pet.queue.name=petQueue
 pet.routing.key=petRoutingKey
 
+notification.exchange.name=notificationExchangeName
+notification.queue.name=notificationQueue
+notification.routing.key=notificationRoutingKey
+
 #synchronization communication
 shelter.host=http://localhost:8084/
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#Resilinece4j Properties
+resilience4j.circuitbreaker.instances.shelterApp.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.shelterApp.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.shelterApp.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.shelterApp.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.shelterApp.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.shelterApp.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.shelterApp.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.shelterApp.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#Resilience4J Timeout Properties
+resilience4j.timelimiter.instances.shelterApp.timeout-duration=3s
+
+#Resilience4J Retry Properties
+resilience4j.retry.instances.shelterApp.max-attempts=3
+resilience4j.retry.instances.shelterApp.wait-duration=5s
