implement cache for show pets in shelter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,22 +8,29 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
+##rabbit mq - test user
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
 topic.exchange.name=applicationExchangeName
+notification.exchange.name=notificationExchangeName
+
 pet.queue.name=petQueue
 pet.routing.key=petRoutingKey
 
-notification.exchange.name=notificationExchangeName
 notification.queue.name=notificationQueue
 notification.routing.key=notificationRoutingKey
 
-#synchronization communication
+##synchronization communication
 shelter.host=http://localhost:8084/
 
+##discover service
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
 
+##cache
+spring.cache.type=simple
+
+##circuitbreaker
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
@@ -44,3 +51,5 @@ resilience4j.timelimiter.instances.shelterApp.timeout-duration=3s
 #Resilience4J Retry Properties
 resilience4j.retry.instances.shelterApp.max-attempts=3
 resilience4j.retry.instances.shelterApp.wait-duration=5s
+
+spring.jpa.show-sql=true
