test implementation of OpenFeign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,37 +21,15 @@ pet.routing.key=petRoutingKey
 notification.queue.name=notificationQueue
 notification.routing.key=notificationRoutingKey
 
-##synchronization communication
-shelter.host=http://localhost:8084/
-
 ##discover service
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
 
 ##cache
 spring.cache.type=simple
-
-spring.cloud.openfeign.circuitbreaker.enabled=true
-
-##circuitbreaker
-#management.health.circuitbreakers.enabled=true
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
-#
-##Resilinece4j Properties
-#resilience4j.circuitbreaker.instances.shelterApp.registerHealthIndicator=true
-#resilience4j.circuitbreaker.instances.shelterApp.event-consumer-buffer-size=10
-#resilience4j.circuitbreaker.instances.shelterApp.slidingWindowType=COUNT_BASED
-#resilience4j.circuitbreaker.instances.shelterApp.slidingWindowSize=5
-#resilience4j.circuitbreaker.instances.shelterApp.failureRateThreshold=50
-#resilience4j.circuitbreaker.instances.shelterApp.waitDurationInOpenState=5s
-#resilience4j.circuitbreaker.instances.shelterApp.permittedNumberOfCallsInHalfOpenState=3
-#resilience4j.circuitbreaker.instances.shelterApp.automaticTransitionFromOpenToHalfOpenEnabled=true
-#
-##Resilience4J Timeout Properties
-#resilience4j.timelimiter.instances.shelterApp.timeout-duration=3s
-#
-##Resilience4J Retry Properties
-#resilience4j.retry.instances.shelterApp.max-attempts=3
-#resilience4j.retry.instances.shelterApp.wait-duration=5s
-
 spring.jpa.show-sql=true
+
+##feign client
+spring.cloud.openfeign.circuitbreaker.enabled=true
+spring.cloud.openfeign.client.config.default.connectTimeout=60
+spring.cloud.openfeign.client.config.default.read-timeout=60
+
